# ResourcesSets

./: .gitignore
Code/Arithmetic/: 1287_有序数组中出现次数超过25%的元素.cpp  BitField.c  IsPrime.c  MonotoneDoubleQueue.cpp  MonotoneStack.cpp  Pi.c  QuickReSqrt.cpp  RedBlackTree.cpp
Code/Asm/: 01_AddSum  01_AddSum.c  01_AddSum.s  01_CalcSum.c  01_CalcSum.s  02_IntegerMulDiv.c  02_IntegerMulDiv.s  CalcSum  analysis.s  call.s  func.c  funs.s  hello.s  main.c  scall.s  start.s
Code/C/: FunctionPtr.c
Code/Cpp/: C20_consteval.cpp  C20_module.cpp  C20_module.cppm  Promise和Future.cpp  STL_Vector.cpp  Thread_Atomic.cpp  a.out  concept.cpp  getKey.c  引用参数练习.cpp  抽奖保底机制.cpp  文件操作.cpp  读取文件的四种方式.cpp  随机数.cpp
Code/DesignPatterns/: 单链表.cpp
Code/OpenCV/: DNN图像分类.cpp  Makefile  OCR-base.cpp  meanshift.cpp  removeBackground.cpp  video.cpp  单应性矩阵.cpp  哈尔级联.cpp  图像分割.cpp  图像匹配.cpp  图像拼接.cpp  图像锐化.cpp  视频前景提取.cpp  角点检测.cpp  车牌检测.cpp  车辆统计.cpp
Code/OpenCV代码/: Makefile  图像处理.cpp  图像滤波.cpp  外接矩形.cpp  边缘检测.cpp
Code/OperatorSystem/: bootsect.s  head.s  setup.s
Code/Qt/: 按键精灵功需求.txt
Code/Qt/AnimationForQML/: CMakeLists.txt  Main.qml  RectBody.qml  behavior.qml  main.cpp  res.qrc
Code/STL/: Deque.cpp  Iterator.cpp  List.cpp  Map.cpp  Queue.cpp  Set.cpp  Stack.cpp  Vector.cpp
Files/: linear.txt  minstd_rand.txt  mt19937.txt  ranlux48_base.txt  shuffle.txt  tessdata.md  uniform.txt
Note/: Assembler.md  C++笔记.md  OpenCV.md  Qt笔记.md  国内镜像源.md  数学.md  笔记.md
文档/: C++11Thread.md  C++笔记.md  Linux工具使用.md  OpenCV.md
笔记/: C++笔记.md  Godot教程.md  OpenCV.md  Qt笔记.md  gtest教程.md  术语.md  语录.md
(+233 files in other folders)
